develop: added base for getGameHandler
